# roq-jupyter

./: CMakeLists.txt  Makefile.am  README.md  configure.ac
conda/: build.sh  meta.yaml
notebooks/: CMakeLists.txt  Makefile.am  simple.ipynb
